tests/workflow/negative/concurrent-non-FC.dot
digraph workflow {
edge [color="#000000"]
graph [bgcolor=transparent]


initial [shape=point; width=0.3; style=filled; color="#0e64ce"; label=""]
doneAlice [shape=ellipse; fontname="Arial"; fontsize=16; style=filled; color=black; fillcolor=white;]
doneBob [shape=ellipse; fontname="Arial"; fontsize=16; style=filled; color=black; fillcolor=white;]
todoAlice [shape=ellipse; fontname="Arial"; fontsize=16; style=filled; color=black; fillcolor=white;]
todoBob [shape=ellipse; fontname="Arial"; fontsize=16; style=filled; color=black; fillcolor=white;]
terminal [shape=point; width=0.3; peripheries=2; style=filled; color="#d11010"; label=""]

1[label=<<FONT POINT-SIZE="16">requestValues</FONT><FONT POINT-SIZE="10" COLOR="blue"> </FONT>>shape=box; fontname="Arial"; style=filled; color=black; fillcolor=gray75;]
2[label=<<FONT POINT-SIZE="16">setValueAlice</FONT><FONT POINT-SIZE="10" COLOR="blue"> <BR/>roles: alice</FONT>>shape=box; fontname="Arial"; style=filled; color=black; fillcolor=gray75;]
3[label=<<FONT POINT-SIZE="16">setValueBob</FONT><FONT POINT-SIZE="10" COLOR="blue"> <BR/>roles: bob</FONT>>shape=box; fontname="Arial"; style=filled; color=black; fillcolor=gray75;]
4[label=<<FONT POINT-SIZE="16">calculateTotal</FONT><FONT POINT-SIZE="10" COLOR="blue"> </FONT>>shape=box; fontname="Arial"; style=filled; color=black; fillcolor=gray75;]
5[label=<<FONT POINT-SIZE="16">bad</FONT><FONT POINT-SIZE="10" COLOR="blue"> </FONT>>shape=box; fontname="Arial"; style=filled; color=black; fillcolor=gray75;]

initial -> 1 ; 1 -> {todoAlice, todoBob}
todoAlice -> 2 ; 2 -> doneAlice
todoBob -> 3 ; 3 -> doneBob
{doneAlice, doneBob} -> 4 ; 4 -> terminal
doneBob -> 5 ; 5 -> terminal

{rank=same doneAlice doneBob}
{rank=same todoAlice todoBob}


}
